<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="24dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/custom_bottom_sheet_all_round">

        <TextView
            android:id="@+id/copy_btn"
            style="@style/Theme.AppCompat.TextView.Friend.More"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="16dp"
            android:gravity="center"
            android:text="@string/home_more_copy">
        </TextView>

        <View
            android:id="@+id/line_copy"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/copy_btn"
            android:background="@color/gray04">
        </View>

        <TextView
            android:id="@+id/save_btn"
            style="@style/Theme.AppCompat.TextView.Friend.More"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/line_copy"
            android:padding="16dp"
            android:gravity="center"
            android:text="@string/bookmark_save">
        </TextView>

        <View
            android:id="@+id/line_save"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/save_btn"
            android:background="@color/gray04">
        </View>

        <TextView
            android:id="@+id/delete_btn"
            style="@style/Theme.AppCompat.TextView.Friend.More"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/line_save"
            android:padding="16dp"
            android:gravity="center"
            android:text="@string/delete">
        </TextView>

        <View
            android:id="@+id/line_delete"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/delete_btn"
            android:background="@color/gray04">
        </View>

        <TextView
            android:id="@+id/user_declare_btn"
            style="@style/Theme.AppCompat.TextView.Friend.More"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/line_delete"
            android:padding="16dp"
            android:gravity="center"
            android:text="@string/user_declare">
        </TextView>

        <View
            android:id="@+id/line_user_declare"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/user_declare_btn"
            android:background="@color/gray04">
        </View>

        <TextView
            android:id="@+id/report_btn"
            style="@style/Theme.AppCompat.TextView.Report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/line_user_declare"
            android:padding="16dp"
            android:gravity="center"
            android:text="@string/report">
        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/close_btn"
        style="@style/Theme.AppCompat.TextView.Friend.More"
        android:background="@drawable/custom_bottom_sheet_all_round"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_main"
        android:layout_marginTop="8dp"
        android:padding="16dp"
        android:gravity="center"
        android:text="@string/close">
    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>