<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:background="@drawable/custom_bottom_sheet">

    <TextView
        android:id="@+id/title"
        style="@style/Theme.AppCompat.TextView.Room.Filter.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/period_select">
    </TextView>

    <TextView
        android:id="@+id/day_one_month"
        style="@style/Theme.AppCompat.TextView.Period.Filter"
        android:background="@drawable/custom_backgroundwhite_radius16"
        android:textColor="@color/gray08"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/one_month">
    </TextView>

    <TextView
        android:id="@+id/day_three_month"
        style="@style/Theme.AppCompat.TextView.Period.Filter"
        android:background="@drawable/custom_backgroundwhite_radius16"
        android:textColor="@color/gray08"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        app:layout_constraintTop_toBottomOf="@id/day_one_month"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/three_month">
    </TextView>

    <TextView
        android:id="@+id/day_six_month"
        style="@style/Theme.AppCompat.TextView.Period.Filter"
        android:background="@drawable/custom_backgroundwhite_radius16"
        android:textColor="@color/gray08"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        app:layout_constraintTop_toBottomOf="@id/day_three_month"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/six_month">
    </TextView>

    <TextView
        android:id="@+id/day_one_year"
        style="@style/Theme.AppCompat.TextView.Period.Filter"
        android:background="@drawable/custom_backgroundwhite_radius16"
        android:textColor="@color/gray08"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        app:layout_constraintTop_toBottomOf="@id/day_six_month"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/one_year">
    </TextView>



</androidx.constraintlayout.widget.ConstraintLayout>