<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="24dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/custom_bottom_sheet_all_round">

        <TextView
            android:id="@+id/gallery_btn"
            style="@style/Theme.AppCompat.TextView.Friend.More"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="16dp"
            android:gravity="center"
            android:text="@string/gallery">
        </TextView>

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/gallery_btn"
            android:background="@color/gray04">
        </View>

        <TextView
            android:id="@+id/camera_btn"
            style="@style/Theme.AppCompat.TextView.Friend.More"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/line1"
            android:padding="16dp"
            android:gravity="center"
            android:text="@string/camera">
        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/close_btn"
        style="@style/Theme.AppCompat.TextView.Friend.More"
        android:background="@drawable/custom_bottom_sheet_all_round"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_main"
        android:layout_marginTop="8dp"
        android:padding="16dp"
        android:gravity="center"
        android:text="@string/close">
    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>