<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.depromeet.knockknock.ui.editbookmark.EditBookmarkViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/edit_btn"
            style="@style/Theme.AppCompat.TextView.EditBookmark.Edit.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="@id/toolbar"
            app:layout_constraintEnd_toEndOf="@id/toolbar"
            android:text="@string/ok"
            app:editBtnEnable="@{viewmodel.deleteBookmarkList}"
            android:clickable="@{viewmodel.enableEditBtn}">
        </TextView>

        <TextView
            android:id="@+id/all_delete_btn"
            style="@style/Theme.AppCompat.TextView.EditBookmark.Delete.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/all_click">
        </TextView>

        <TextView
            android:id="@+id/delete_btn"
            style="@style/Theme.AppCompat.TextView.EditBookmark.Delete.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toEndOf="@id/all_delete_btn"
            android:layout_marginStart="8dp"
            android:text="@string/delete_short"
            android:clickable="@{viewmodel.enableEditBtn}">
        </TextView>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bookmark_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/all_delete_btn"
            android:layout_marginTop="4dp"
            android:overScrollMode="never"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/holder_edit_bookmark">
        </androidx.recyclerview.widget.RecyclerView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

