<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.depromeet.knockknock.ui.settingroom.SettingRoomViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextAppearance="@style/ToolBarStyle"/>

        <TextView
            android:id="@+id/category_title"
            style="@style/Theme.AppCompat.TextView.Setting.Room.Content.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:text="@string/category"
            android:layout_marginTop="16dp">
        </TextView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/category_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/category_title"
            app:layout_constraintBottom_toBottomOf="@id/category_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="8dp"
            android:layout_marginEnd="8dp"
            android:onClick="@{() -> viewmodel.onCategoryClicked()}">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/next_img">
            </TextView>
            <ImageView
                android:id="@+id/next_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_next"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">
            </ImageView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/detail_info_title"
            style="@style/Theme.AppCompat.TextView.Setting.Room.Content.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/category_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:text="@string/detail_information"
            android:layout_marginTop="24dp">
        </TextView>

        <TextView
            android:id="@+id/detail_edit_btn"
            style="@style/Theme.AppCompat.TextView.Setting.Room.Edit.Btn"
            android:background="@drawable/custom_transparents_radius06_line_gray04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@id/detail_info_title"
            app:layout_constraintBottom_toBottomOf="@id/detail_info_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="@{() -> viewmodel.onEditDetailClicked()}"
            android:text="@string/edit">
        </TextView>

        <TextView
            android:id="@+id/memeber_title"
            style="@style/Theme.AppCompat.TextView.Setting.Room.Member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/detail_info_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp"
            android:text="@string/member">
        </TextView>
        <TextView
            android:id="@+id/member_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/memeber_title"
            app:layout_constraintBottom_toBottomOf="@id/memeber_title"
            app:layout_constraintStart_toEndOf="@id/memeber_title">
        </TextView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/memeber_title"
            android:background="@drawable/custom_backgroundwhite_radius16"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <ImageView
                android:id="@+id/room_img"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">
            </ImageView>

            <TextView
                android:id="@+id/link_desciption1"
                style="@style/Theme.AppCompat.TextView.Friend.List.Link.Description1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/room_img"
                android:text="@string/invite_room_link"
                android:layout_marginStart="12dp">
            </TextView>

            <TextView
                android:id="@+id/link_desciption2"
                style="@style/Theme.AppCompat.TextView.Friend.List.Link.Description2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/link_desciption1"
                app:layout_constraintStart_toStartOf="@id/link_desciption1"
                android:text="@string/link">
            </TextView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/ic_link">
            </ImageView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/add_member_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layout_link"
            android:layout_marginTop="28dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <ImageView
                android:id="@+id/add_img"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="8dp"
                android:src="@drawable/ic_plus"
                android:background="@drawable/custom_backgroundwhite_radius80">
            </ImageView>

            <TextView
                style="@style/Theme.AppCompat.TextView.Setting.Room.Add.Member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/add_img"
                android:layout_marginStart="16dp"
                android:text="@string/add_friend">
            </TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/add_member_btn"
            android:background="@color/background_white_mode"
            android:layout_marginTop="12dp">
        </View>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/friend_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/line1"
            app:layout_constraintBottom_toTopOf="@id/delete_btn"
            android:layout_marginTop="12dp"
            android:overScrollMode="never"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/holder_export_member"
            android:layout_marginBottom="8dp">
        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/delete_btn"
            style="@style/Theme.AppCompat.TextView.Setting.Room.Remove.Btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/custom_red_corner_radius10"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/remove_room"
            android:gravity="center">
        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

